apt-listchanges (2.66) UNRELEASED; urgency=low

  * Remove cruft in postinst for versions older than sarge ones.
  * Remove /var/lib/apt/listchanges.db at purge (Closes: 319603).

 -- Pierre Habouzit <madcoder@debian.org>  Mon,  2 Oct 2006 22:15:39 +0200

apt-listchanges (2.65) unstable; urgency=low

  * Change confirm semantics: negative value means confirmation cannot be run.
    Assume we don't want to save our state in that case, and proceed as usual
    (Closes: 311919, 355399).

  * Use more clever regexps (even sub regexps!) to recognize Closes: 316531
    correctly (the recursion is a courtesy of Christoph Berg).

 -- Pierre Habouzit <madcoder@debian.org>  Thu, 28 Sep 2006 14:21:41 +0200

apt-listchanges (2.64) unstable; urgency=low

  * Be less strict on rfc822-like parse, accept continuation lines starting
    with \t (Closes: 388861).

  * Italian translations thanks to Luca Monducci (Closes: 384805):
    + man page,
    + debconf template,
    + program translations.

  * French translations thanks to Christian Perrier
    (Closes: 386808, 386807, 387223).

 -- Pierre Habouzit <madcoder@debian.org>  Sun, 24 Sep 2006 16:15:59 +0200

apt-listchanges (2.63) unstable; urgency=low

  * When run in locale 'C', the code fails because getlocale()[1] is None.
    default to 'ascii' in that case, that is the sole sane choice, user has to
    set his locale if that does not suits him. (Closes: #384413, #384574).

 -- Pierre Habouzit <madcoder@debian.org>  Sat, 26 Aug 2006 03:45:58 +0200

apt-listchanges (2.62) unstable; urgency=low

  * templates translations:
    + update gl.po thanks to Jacobo Tarrio.
    + update ca.po thanks to Jordi Mallach (Closes: #383980).
    + update pt.po thanks to Rui Pedro.
    + update nl.po thanks to Bart Cornelis.
    + update fr.po thanks to Denis Barbier.

  * More python simplifications.

  * Fix bug in html generation (generated html was obviously invalid).
